--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <section id="blog">
         <h2>My Achievements</h2>
-        <p>I'm a certified Programmer <br>Game Developer <br>In-training Hacker <br>and Website Developer(as i developed this one) </p>
+        <p>I'm a certified Programmer <br>Game Developer <br>In-training Hacker (yessir) <br>and Website Developer(as i developed this one) </p>
     </section>
 
     <section id="contact">
